[package]
name = "torchctl"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
nix = "0.13.0"
strum = "0.15.0"
strum_macros = "0.15.0"

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
